--- a/sites/all/themes/herne_hill/sass/components/_actions.sass
+++ b/sites/all/themes/herne_hill/sass/components/_actions.sass
@@ -8,12 +8,12 @@
 .ol-action-box
   background-color: $col-links-lightest
   padding: 0.5em 5px
-  margin-bottom: 20px
+  margin-bottom: 1em
 
-  a
-    &:hover
-      text-decoration: none
-      margin-bottom: 0
+  // a
+  //   &:hover
+  //     text-decoration: none
+  //     margin-bottom: 0
 
 
 // The Action Button itself
